# HP_TREE

./: .gitignore  CLAUDE.md  HP_TREE_Research_Article.md  README.md
benchmark/: README.md  hp_k_optimizer.py  hp_vs_bplus_benchmark.py
benchmark_cpp/: .gitignore  CMakeLists.txt
benchmark_cpp/datasets/: query_spec.json  query_spec_clustered.json  query_spec_sequential.json  query_spec_skewed.json
benchmark_cpp/python/: generate_datasets.py  run_benchmarks.py
benchmark_cpp/results/: bplus_clustered.json  bplus_sequential.json  bplus_skewed.json  bplus_uniform.json  hp_clustered.json  hp_sequential.json  hp_skewed.json  hp_uniform.json
benchmark_cpp/results/baseline/: bplus_clustered.json  bplus_sequential.json  bplus_skewed.json  bplus_uniform.json  hp_clustered.json  hp_sequential.json  hp_skewed.json  hp_uniform.json
benchmark_cpp/results/round2/: bplus_clustered.json  bplus_sequential.json  bplus_skewed.json  bplus_uniform.json  hp_clustered.json  hp_sequential.json  hp_skewed.json  hp_uniform.json
benchmark_cpp/results/round3_final/: bp_clustered.json  bp_sequential.json  bp_skewed.json  bp_uniform.json  hp_clustered.json  hp_sequential.json  hp_skewed.json  hp_uniform.json
benchmark_cpp/src/: bplus_runner.cpp  common.hpp  hp_runner.cpp
cpp/: CMakeLists.txt  README.md
cpp/include/: hp_tree.hpp  hp_tree_buffer_pool.hpp  hp_tree_common.hpp  hp_tree_delta_buffer.hpp  hp_tree_iterator.hpp  hp_tree_node.hpp  hp_tree_stats.hpp  hp_tree_wal.hpp
cpp/src/: main.cpp
